--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
             <div>
                 <div class="card" >
-                    <div class="card-header-title">
-                    <h5 class="text-center">Deploy in seconds</h5>
+                    <div class="card-header-title .MdG-bg-greyForm .MdG-text-blue">
+                    <h5 class="text-center MdG-text-Blue">Deploy in seconds</h5>
                 </div>
                 <div class="form">
                     <form >
