--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </div>
 
             <div>
-                <div class="card" >
-                    <div class="card-header-title .MdG-bg-greyForm .MdG-text-blue">
+                <div class="registration" >
+                    <div class=" .MdG-bg-greyForm .MdG-text-blue">
                     <h5 class="text-center MdG-text-Blue">Deploy in seconds</h5>
                 </div>
                 <div class="form">
