--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div>
                 <div class="registration" >
                     <div class=" .MdG-bg-greyForm .MdG-text-blue">
-                    <h5 class="text-center MdG-text-Blue">Deploy in seconds</h5>
+                    <h5 class="text-center MdG-text-blue">Deploy in seconds</h5>
                 </div>
                 <div class="form">
                     <form >
@@ -112,7 +112,7 @@
                             <input type="text"   placeholder="First Name">
                             <input type="email"  placeholder="Email Address">
                             <input type="password" placeholder="Password" >
-                            <button type="submit" class="btn">Sign up with email</button>
+                            <button type="submit" class="btn MdG-bg-blue MdG-text-blue">Sign up with email</button>
                         </span>
                     </form>
                 </div>
