--- a/index.html
+++ b/index.html
@@ -112,15 +112,18 @@
                             <input type="text"   placeholder="First Name">
                             <input type="email"  placeholder="Email Address">
                             <input type="password" placeholder="Password" >
-                            <button type="submit" class="btn MdG-bg-blue MdG-text-blue">Sign up with email</button>
+                            <button type="submit" class="btn MdG-btn-primary btn-lg">Sign up with email</button>
                         </span>
                     </form>
                 </div>
                     <div class="">
                         <button class="btn">
-                        <img src="" alt="Sign up with Google" class="">Sign up with Google</button>
+                            <img src="img/google-icon.png" alt="Sign up with Google" class="">Sign up with Google
+                        </button>
+                        
                         <button class="btn">
-                        <img src="" alt="icon" class=""></button>
+                            <i class="fab fa-github"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="bottom">
