--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section>
         <div class="hero-body"></div>
             <div class="container hero">
-                <img src="img/bg-banner-home.jpg" alt="banner">
+                <img src="img/bollicine.svg" alt="banner">
                 <div class="testo hero-title">
                     <h1>Welcome to the developer cloud</h1>
 
