--- a/index.html
+++ b/index.html
@@ -109,14 +109,15 @@
     <section>      
       <div class="container hero">
         <img src="img/bollicine.svg" alt="banner">
-        
-        <div class="testo hero-title">
+        <div class="row">
+
+        <div class="testo hero-title col-lg-6">
           <h1>Welcome to the developer cloud</h1>
           <p>
               We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.
           </p>                     
         </div> 
-        <div class="registration content container" >
+        <div class="registration content container col-lg-6" >
           <div class="row">
             <div class="box col-xs-10 col-xs-offset-1 panel">
               <div class=" .MdG-bg-greyForm .MdG-text-blue">
@@ -150,13 +151,14 @@
               </div>
             
               <div class="MdG-bottom text-center">
-                  <p>By signing up you agree to the <a href="#">Terms of Service</a>.
-                  </p>
-              </div>
+                <p>By signing up you agree to the <a href="#">Terms of Service</a>.
+                </p>
+            </div>
 
             </div>
           </div>
         </div>
+      </div>
       </div>     
     </section>
 
@@ -164,7 +166,7 @@
       <div class="container">
         <h6 class="h6 text-center text-uppercase MdG-text-blue ">Innovative businesses trust DigitalOcean</h6>
         <div class="container ">
-          <div class="no-scroll">
+          <div class="no-scroll text-center">
           <img src="img/docker.svg" alt="Docker logo" class="     ">
           <img src="img/gitlab.svg" alt="GitLab logo" class="     ">
           <img src="img/slack.svg" alt="Slack logo" class="     ">
