--- a/index.html
+++ b/index.html
@@ -466,39 +466,46 @@
                   
                 </div>
               </section>
-              <section class="connection">
+              <section class="connection container">
 
                 <h2 class="h2">bla bla bla bla</h2>
-                <div class="">
-                  <p> bla bla bla bla</p>
-                </div>
-                <div class="">
-                  <ul class="">
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                
+                <div class="row">
+
+                  <ul class="col-lg-5 col-lg-offset-1">
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>                    
                   </ul>
-                  <ul class="">
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                  <ul class="col-lg-5 col-lg-offset-1">
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>
-                    <li><span  class="">AMS2</span>
-                      <p   class="">Amsterdam, Netherlands</p><a href="" url="" class="" >Test Speed</a>
+                    <li class="row"><span  class="col-xs-2">AMS2</span>
+                      <p   class="col-xs-6">Amsterdam, Netherlands</p>
+                      <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>                    
                   </ul>
                 </div>
