--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </section>-->
 
     <section class="deploy-2">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <h2 class="h2  text-center">Deploy and scale seamlessly</h2>
           <p class="">Our optimized configuration process saves your team time when running and scaling distributed applications, AI &amp; machine learning workloads, hosted services, client websites, or CI/CD&nbsp;environments.</p>
@@ -343,7 +343,7 @@
             -->
 
 
-              <div class="container MdG-carousel">
+              <div class="container-fluid MdG-carousel">
                 <div class="row">
                   <div class='col-md-offset-2 col-md-8 text-center'>
                     <h2 class="h2 text-center">Designed for developers</h2>
@@ -466,7 +466,7 @@
                   
                 </div>
               </section>
-              <section class="connection container">
+              <section class="connection container-fluid">
 
                 <h2 class="h2">bla bla bla bla</h2>
                 
@@ -490,7 +490,7 @@
                       <a href="" class="col-xs-4" >Test Speed</a>                      
                     </li>                    
                   </ul>
-                  <ul class="col-lg-5 col-lg-offset-1">
+                  <ul class="col-lg-5 ">
                     <li class="row"><span  class="col-xs-2">AMS2</span>
                       <p   class="col-xs-6">Amsterdam, Netherlands</p>
                       <a href="" class="col-xs-4" >Test Speed</a>                      
