--- a/index.html
+++ b/index.html
@@ -794,14 +794,22 @@
             </div>
           </footer>
           <section class="chat">
-            <input type="checkbox" class="icona">
+            <div class="icona">
               <span class="circle">2</span>
+              <!--<input type="checkbox" name="squalo" id="fumetto">
+              <label for="fumetto">-->
               <a href="#"><img src="img/shark.png" alt="shark"></a>
-          </input>
+              <!--</label>-->
+            </div>
             <div class="MdG-hide">
               <p>Can I answer any question you have about DigitalOcean</p>
               <span> </span>
             </div>
           </section>
+          <!--
+          <div class="prova" id="prova">
+            <input id="fumetto" type="checkbox" name="miachat"/>
+            <label for="fumetto">prova <img src="img/shark.png" alt=""></label>
+          </div>-->
 </body>
 </html>
