correzione freccine su carousel

--- a/index.html
+++ b/index.html
@@ -417,10 +417,11 @@
                             </div>
                           </blockquote>
                         </div>
-                      <!-- Carousel Buttons Next/Prev -->
-                      <a href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
-                      <a href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
-                    </div>                          
+                      <!--posizione precedente -->
+                    </div>  
+                    <!-- Carousel Buttons Next/Prev -->
+<!--correzione-->   <a href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a> 
+<!--funziona!!-->   <a href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>                        
                   </div>
                 </div>
               </div> 
